# katey-el-es

./: Cargo.toml  Makefile  README.md
certgen/: Cargo.toml
certgen/tests/: common.rs  toplevel.rs
certutils/: Cargo.toml
certutils/src/: lib.rs
integration-test/: Cargo.toml
integration-test/tests/fixture/: mod.rs
integration_test/: .gitignore  Cargo.toml  fixture.toml
integration_test/tests/: ensemble.rs
integration_test/tests/fixture/: mod.rs
io-copy/: Cargo.toml
io-copy/src/: lib.rs
katey-client/: Cargo.toml
katey-client/src/: lib.rs  main.rs
katey-el-es/: Cargo.toml
katey-el-es/src/: main.rs
manual-test/: fixture.toml  katey-bad-client.sh  katey-fib-client.sh  tcp-echo-client.sh  tcp-fib-client.sh
manual_test/: .gitignore  fixture.toml  katey-bad-client.sh  katey-bad-server.sh  katey-echo-client.sh  run.sh  tcp-echo-client.sh  tcp-fib-client.sh
src/: lib.rs  main.rs
tcp-client/: Cargo.toml
tcp-client/src/: lib.rs  main.rs
tcp-echo/: Cargo.toml
tcp-echo/src/: main.rs
tcp-fibonacci/: Cargo.toml
tcp-fibonacci/src/: main.rs
tcp-server/: Cargo.toml
tcp-server/src/: lib.rs
tcp_client/: Cargo.toml
tcp_client/src/: main.rs
tcp_echo/: Cargo.toml
tcp_echo/src/: main.rs
tcp_echo/tests/: echo.rs
tcp_fibonacci/: Cargo.toml
tcp_fibonacci/src/: main.rs
tcp_fibonacci/tests/: fib.rs
tests/: cli.rs  common.rs  toplevel.rs
tls-server/: Cargo.toml
tls-server/src/: lib.rs
