[package]
name = "katey-client"
version = "0.1.0"
authors = ["Klaas de Vries <klaasjacobdevries@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
certutils = { path = "../certutils"}
clap = "^2.33.0"
tokio = { version = "^0.2.20", features = ["net", "io-util", "rt-core", "macros"] }
tokio-rustls = "^0.13.0"
