[package]
name = "katey-el-es"
version = "0.1.0"
authors = ["Klaas de Vries <klaasjacobdevries@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-copy = { path = "../io-copy" }
tls-server = { path = "../tls-server" }
tokio = { version = "^0.2.20", features = ["net", "io-util"] }
clap = "^2.33.0"
log = "^0.4.8"
simple_logger = "^1.5.0"
