[package]
name = "tcp-echo"
version = "0.1.0"
authors = ["Klaas de Vries <klaasjacobdevries@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcp-server = { path = "../tcp-server" }
io-copy = { path = "../io-copy" }
clap = "^2.33.0"
log = "^0.4.8"
simple_logger = "^1.5.0"

[dev-dependencies]
escargot = "^0.5.0"
