[package]
name = "tls-server"
version = "0.1.0"
authors = ["Klaas de Vries <klaasjacobdevries@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
certutils = { path = "../certutils" }
tokio = { version = "^0.2.20", features = ["net", "io-util", "rt-core", "rt-threaded", "macros", "signal"] }
log = "^0.4.8"
futures = "^0.3.5"
string-error = "^0.1.0"
rustls = "^0.17.0"
webpki = "^0.21.2"
tokio-rustls = "^0.13.0"
